--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                         <div class="hamburger-icon"></div>
                     </button>
 
-                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item dropdown"><a class="nav-link link" href="intro.html" aria-expanded="false">INTRODUCTION</a></li><li class="nav-item dropdown open"><a class="nav-link link dropdown-toggle" href="https://mobirise.com/" data-toggle="dropdown-submenu" aria-expanded="true">APPLICATIONS</a><div class="dropdown-menu"><a class="dropdown-item" href="photoshopgallery.html" aria-expanded="false">Adobe Photoshop</a><div class="dropdown"><a class="dropdown-item dropdown-toggle" href="#" data-toggle="dropdown-submenu" aria-expanded="false">Office Suite</a><div class="dropdown-menu dropdown-submenu"><div class="dropdown"><a class="dropdown-item dropdown-toggle" href="word" data-toggle="dropdown-submenu" aria-expanded="false">Word</a><div class="dropdown-menu dropdown-submenu"><a class="dropdown-item" href="https://susanalugones.github.io/documents/discussittopic6.pdf">DisscusIT</a></div></div><a class="dropdown-item" href="powerpoint">PowerPoint</a></div></div><a class="dropdown-item" href="adobe auditio">Adobe Audition</a><a class="dropdown-item" href="adobe premire">Adobe Premire</a><a class="dropdown-item" href="illustrator">Adobe Illustrator</a><a class="dropdown-item" href="123d">123D</a><a class="dropdown-item" href="personal work.html">Personal Work</a></div></li><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle" href="https://mobirise.com/" data-toggle="dropdown-submenu" aria-expanded="false">CREDENTIALS</a><div class="dropdown-menu"><a class="dropdown-item" href="#">Adobe PS</a><a class="dropdown-item" href="#">Adobe Audition</a><a class="dropdown-item" href="#">Adobe Premiere</a><a class="dropdown-item" href="#">Adobe Illustrator</a><a class="dropdown-item" href="#">IC3<br></a></div></li><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle" href="https://mobirise.com/" data-toggle="dropdown-submenu" aria-expanded="false">REFERENCES</a><div class="dropdown-menu"><a class="dropdown-item" href="#">Mr.Pate</a><a class="dropdown-item" href="#"></a><a class="dropdown-item" href="#">Haayen Carolina<br></a><a class="dropdown-item" href="#">Javier Martinez</a><a class="dropdown-item" href="#">Javier Lopez</a></div></li></ul>
+                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item dropdown"><a class="nav-link link" href="intro.html" aria-expanded="false">INTRODUCTION</a></li><li class="nav-item dropdown open"><a class="nav-link link dropdown-toggle" href="https://mobirise.com/" data-toggle="dropdown-submenu" aria-expanded="true">APPLICATIONS</a><div class="dropdown-menu"><a class="dropdown-item" href="photoshopgallery.html" aria-expanded="false">Adobe Photoshop</a><div class="dropdown"><a class="dropdown-item dropdown-toggle" href="#" data-toggle="dropdown-submenu" aria-expanded="false">Office Suite</a><div class="dropdown-menu dropdown-submenu"><div class="dropdown"><a class="dropdown-item dropdown-toggle" href="word" data-toggle="dropdown-submenu" aria-expanded="false">Word</a><div class="dropdown-menu dropdown-submenu"><a class="dropdown-item" href="https://susanalugones.github.io/documents/discussittopic6.pdf">DisscusIT</a></div></div><a class="dropdown-item" href="powerpoint">PowerPoint</a></div></div><a class="dropdown-item" href="adobe auditio">Adobe Audition</a><div class="dropdown"><a class="dropdown-item dropdown-toggle" href="adobe premire" data-toggle="dropdown-submenu" aria-expanded="false">Adobe Premire</a><div class="dropdown-menu dropdown-submenu"><a class="dropdown-item" href="https://youtu.be/JZYH5Br8nKA">IMAGINE DRAGONS</a></div></div><a class="dropdown-item" href="illustrator">Adobe Illustrator</a><a class="dropdown-item" href="123d">123D</a><a class="dropdown-item" href="personal work.html">Personal Work</a></div></li><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle" href="https://mobirise.com/" data-toggle="dropdown-submenu" aria-expanded="false">CREDENTIALS</a><div class="dropdown-menu"><a class="dropdown-item" href="#">Adobe PS</a><a class="dropdown-item" href="#">Adobe Audition</a><a class="dropdown-item" href="#">Adobe Premiere</a><a class="dropdown-item" href="#">Adobe Illustrator</a><a class="dropdown-item" href="#">IC3<br></a></div></li><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle" href="https://mobirise.com/" data-toggle="dropdown-submenu" aria-expanded="false">REFERENCES</a><div class="dropdown-menu"><a class="dropdown-item" href="#">Mr.Pate</a><a class="dropdown-item" href="#"></a><a class="dropdown-item" href="#">Haayen Carolina<br></a><a class="dropdown-item" href="#">Javier Martinez</a><a class="dropdown-item" href="#">Javier Lopez</a></div></li></ul>
                     <button hidden="" class="navbar-toggler navbar-close" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">
                         <div class="close-icon"></div>
                     </button>
@@ -60,7 +60,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-parallax-background mbr-section-with-arrow mbr-after-navbar" id="header1-4o" style="background-image: url(assets/images/mbr-3-2000x1333.jpg);">
+<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Website Builder</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-parallax-background mbr-section-with-arrow mbr-after-navbar" id="header1-4o" style="background-image: url(assets/images/mbr-3-2000x1333.jpg);">
 
     <div class="mbr-overlay" style="opacity: 0.9; background-color: rgb(0, 0, 0);"></div>
 
@@ -226,12 +226,12 @@
     </div>
 </section>
 
-<section class="mbr-section mbr-section__container" id="buttons1-6o" style="background-color: rgb(23, 25, 30); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section mbr-section__container" id="buttons1-6p" style="background-color: rgb(239, 239, 239); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
-                <div class="text-xs-center"> <a class="btn btn-white-outline btn-white" href="https://youtu.be/rRXMTOVr8VA">Who I Am</a></div>
+                <div class="text-xs-center"><a class="btn btn-primary" href="https://youtu.be/rRXMTOVr8VA">WHO I AM</a> <a class="btn btn-black btn-black-outline" href="https://youtu.be/xGk8PNJxdsI">SEE WHAT IM WORKING ON</a></div>
             </div>
         </div>
     </div>
@@ -258,7 +258,7 @@ Phone: (786)-397-1094<br><br></p>
                     <div hidden="" data-form-alert-success="true">Thanks for filling out form!</div>
                 </div>
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
-                    <input type="hidden" value="0QE6titxrOPULj7jA/1ViR869UAvJXhxIDLO8EuhFjzIKqKiqfRGWdSxb22NJoXHhUwU6Ypf99yLFzBeSr35uyIIfQwd6xwR0VWyDXsHrHYG2MS2Y4H0cC8ZJUKTS/X1" data-form-email="true">
+                    <input type="hidden" value="z6nn+eoqR4Eu7b1Hfc6uoOC68PoiM/ddB7IH3HzEhqqeO6zsV6m+2HE2+Uizv8tr5mdk6D1HpwbzZTnMfZvWx36iPF5AxywuEFfmV525DTacNBjaEkEwsTAt9py1nwQK" data-form-email="true">
                     
                     <div class="form-group">
                         <label class="form-control-label" for="contacts4-4m-email">Email<span class="form-asterisk">*</span></label>
